pkl-core/src/test/files/LanguageSnippetTests/input/errors/moduleExtendsVersionCheck2.pkl
@ModuleInfo { minPklVersion = "99.9.9" }
extends "baseModule.pkl"
